--- a/assets/styles.css
+++ b/assets/styles.css
@@ -2,8 +2,8 @@
 
 
 
-/*.card {
-    #min-height:100px;
+.card {
+    min-height:100px;
     border-width: 0;
     border-radius: 2px;
     box-shadow: 0 0 5px rgba(28, 39, 60, 0.1);
@@ -16,23 +16,23 @@
 
 .card-title {
     font-weight: 700;
-    color: #1c273c;
+    color: #dadcde;
     font-size: 14px;
     margin-bottom: 2px;
 }
 
 .card-intro{
-    color: #7987a1;
+    color: #d9dce1;
     font-size: 12px;
 }
 
 .container-fluid{
-    background-color:rgba(211, 211, 211, 0.117);
+    background-color:rgba(45, 210, 67, 0.79);
 }
 
 .kpi-label {
     text-transform: none;
-    color: #031b4e;
+    color: #a32794;
     font-weight: 500;
     font-size: 0.875rem;
     margin-bottom: 10px;
@@ -40,4 +40,33 @@
 
 .selector-label {
     font-size: 0.875rem;
-}*/
+}
+
+.blanco {
+    filter: invert(1) sepia(1) hue-rotate(180deg) saturate(1000%);
+}
+
+.center {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
+    display: block;
+}
+
+.arbol {
+    width: 100%;
+    height: 100%;
+    
+}
+
+.arbol h3 {
+    font-size: 1.5rem;
+    color: #fff;
+    margin-bottom: 0;
+}
+
+.arbol Img{
+    position: relative;
+    height: 100px;
+    filter: invert(1) sepia(1) hue-rotate(180deg) saturate(1000%);
+}
